Updated JavaFX lib jar files and instructions.  Fixed Recents.java and Config.java for startup