@@ -1,10 +1,12 @@
-# Powerdock
+# Powerdock (2020 Setup update)
 
-# general folder structure
+# Project folder structure
 
 The Powerdock app uses these folders (create if not included)
 
 src: contains Java source files
+
+fxlb : contains the JavaFX library
 
 classes : contains compiled JVM bytecode
 
@@ -18,19 +20,37 @@ html: contains any html output from the program.
 
 Modify the Config.java file before compiling to ensure project directory is specified.
 
-# Compiling .java files to bytecode
+e.g. with src folder for source files etc
 
-Ensure there is a classes folder inside the main powerdock project folder
+# Make sure you have JavaFX library available
 
-Within the powerdock folder:
+To use JavaFX you need to invoke it as a module when you compile and run.  It is not longer automatically part of the Java SDK.
 
-`javac -d classes src/*.java`
+So first you need to download the JavaFX library.
 
-# Running from bytecode
+see https://openjfx.io and https://gluonhq.com/products/javafx/
 
-Within the main powerdock folder type and run from command line:
+The openJDK download is specific for each OS.  The SDK library file when unzipped will be closer to 95MB.
 
-`java -cp classes Main`
+When you have downloaded the JavaFX SDK package, locate the folder javafx-sdk-11.0.2 (or similar) and inside this, find the lib file with the javafx .jar files in it.  
+
+Rename it to fxlib and put it into the root folder of the Powerdock project.
+
+# Summary of what to do to get app with JavaFX running from source (as at 7 August 2020)
+
+The next step is to set up the environment variables and make it easier to invoke the program.  This requires some terminal (bash) commands to be executed, in order.
+
+In the parent folder (the root folder for the github):
+
+export PATH_TO_FX='fxlib'
+alias compilej='javac -cp classes -d classes src/*.java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.swing,javafx.web'
+alias runprog='java --module-path $PATH_TO_FX --add-modules javafx.controls,javafx.swing,javafx.web -cp classes Main'
+
+Then just type this to compile
+compilej 
+
+and this to run:
+runprog
 
 # Simple instructions
 
